[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/menu/menu_theme_btns.tres" type="Theme" id=1]
[ext_resource path="res://resources/UI/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.0901961, 0.262745, 0.729412 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 82.0
margin_top = 27.0
margin_right = 157.0
margin_bottom = 108.0
custom_constants/separation = 10

[node name="Paused" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 75.0
margin_bottom = 17.0
text = "Paused"
align = 1
valign = 1

[node name="Spacing" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 75.0
margin_bottom = 27.0

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 75.0
margin_bottom = 54.0
rect_min_size = Vector2( 75, 0 )
text = "Resume Game"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 75.0
margin_bottom = 81.0
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
